# lab-code-IsabelJoseph101

./: README.md
Image/: CMakeLists.txt
Image/include/: Image.h  RGBA.h
Image/src/: Image.cpp  main.cpp
Image/test/: ImageTests.cpp  RGBATests.cpp
